# src/presentation/server/routes/ipPool.route.ts
@@ -41,20 +41,30 @@ router.get("/:id",
     ipPoolController.getIPPoolById)
 
 router.get("/util/:id", 
-        /*
+    /*
         #swagger.tags = ['IP Pool']
         #swagger.summary = 'getIPPoolUtilization'
         #swagger.responses[200] = {
             description: 'Get IP Pool utilization successfully',
-            schema: {
-                utilization: "number"
+            content: {
+                "application/json": {
+                    schema: {
+                        type: 'object',
+                        properties: {
+                            utilization: {
+                                type: 'number',
+                                example: 0.75
+                            }
+                        }
+                    }
+                }
             }
         }
         #swagger.responses[500] = {
             description: 'Internal Server Error',
             schema: { message: 'string' }
         }
-    */ 
+    */
     ipPoolController.getIPPoolUtilization)
 
 router.post("/", 
@@ -78,18 +88,18 @@ router.post("/",
                 }
             }
         }
-    #swagger.responses[200] = {
-        description: 'IP Pool created successfully',
-        schema: {
-            id: "number",
-            name: "string",
-            type: "string",
-            cidr: "string",
-            subnetId: "number",
-            createdAt: "string",
-            updatedAt: "string"
+        #swagger.responses[200] = {
+            description: 'IP Pool created successfully',
+            schema: {
+                id: "number",
+                name: "string",
+                type: "string",
+                cidr: "string",
+                subnetId: "number",
+                createdAt: "string",
+                updatedAt: "string"
+            }
         }
-    }
         #swagger.responses[500] = {
             description: 'Internal Server Error',
             schema: { message: 'string' }
